--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" type="text/css" href="./style.css">
     <title>Resume</title>
 </head>
 <body>
@@ -89,22 +89,22 @@
         </section>
         <section id="contact">
             <article>
-                <img class="profile" src="/assets/profile.PNG">
+                <img class="profile" src="./assets/profile.PNG">
                 <h3>Contact</h3>
                 <div class="m-top contact-item">
-                    <img width="20rem" src="/assets/location.svg" />
+                    <img width="20rem" src="./assets/location.svg" />
                     <p class="date">&nbsp;134-L, St. 154, Phase 1, DHA</p>
                 </div>
                 <div class="m-top contact-item">
-                    <img width="20rem" src="/assets/phone.svg" />
+                    <img width="20rem" src="./assets/phone.svg" />
                     <p class="date">&nbsp;0321-1424235</p>
                 </div>
                 <div class="m-top contact-item">
-                    <img width="20rem" src="/assets/email.svg" />
+                    <img width="20rem" src="./assets/email.svg" />
                     <p class="date">&nbsp;l201007@lhr.nu.edu.pk</p>
                 </div>
                 <div class="m-top contact-item">
-                    <img width="20rem" src="/assets/web.svg" />
+                    <img width="20rem" src="./assets/web.svg" />
                     &nbsp;
                     <a target="_blank" href="https://raza-h.github.io" class="date">https://raza-h.github.io</a>
                 </div>
